src/objects/Marketing_Interaction__c.object
<CustomObject>
    <description>Object used to trigger journeys in Marketing Cloud.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Marketing Interactions</relationshipLabel>
        <relationshipName>Marketing_Interactions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Communication_Type__c</fullName>
        <label>Communication Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CA - Customer Onboarding</fullName>
                </value>
                <value>
                    <fullName>CA - Product Onboarding - G5</fullName>
                </value>
                <value>
                    <fullName>CA - Reorder Reminder - G5</fullName>
                </value>
                <value>
                    <fullName>CA - Product Onboarding - G6</fullName>
                </value>
                <value>
                    <fullName>CA - Reorder Reminder - G6 Starter Kit</fullName>
                </value>
                <value>
                    <fullName>UKIE - Customer Onboarding - G6</fullName>
                </value>
                <value>
                    <fullName>UKIE - Customer Review</fullName>
                </value>
                <value>
                    <fullName>UKIE - Warrior Recruitment</fullName>
                </value>
                <value>
                    <fullName>UKIE - Subscription Renewal - G6</fullName>
                </value>
                <value>
                    <fullName>CA - Subscription Upsell - G6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country should always be required for all records entered in this object.</description>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Information__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Information</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Marketing Interaction</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Marketing Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>